# DataAnalysis

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  data.py  pyproject.toml  raport_cen.csv  requirements.txt  requirements2.txt  routes.py  test.py
app/backend/: routes.py
data/: dish_categories.csv  dish_sizes.csv  dishes.csv  dishes_menu_types.csv  dishes_toppings.csv  lookup_categories.csv  lookup_sizes.csv  lookup_toppings.csv
