[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-camelcase>=2.0.0",
    "logging>=0.4.9.6",
    "pandas>=2.2.3",
    "uvicorn>=0.34.3",
]
